crates/tui/src/snapshots/tui__view__home__tests__home_cascade_question_wrapped.snap
---
source: crates/tui/src/home_view_tests.rs
expression: drawn
---



                     ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                     ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                     ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                     ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts


[w]  [no model]  [thinking: default]  Enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
Delete fix the parser (s_0123456789abcdef) and 8 sessions that continue it:
s_0000000000000001, s_0000000000000002, s_0000000000000003, s_0000000000000004,
s_0000000000000005, s_0000000000000006, s_0000000000000007, s_0000000000000008?
It cannot be undone · enter delete all · esc keep
○  fix the parser                                                              ✕




          ↓ chips and sessions · F1 the key map · Ctrl+C twice to quit
