crates/tui/src/snapshots/tui__view__home__tests__home_first_frame_40x10.snap
---
source: crates/tui/src/home_view_tests.rs
expression: "screen(&home(40, 10), 40, 10)"
---

             ⌇ fiber 0.0.1

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
> /? for shortcuts


[w]  enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
↓ the session list · F1 the key map · Ct
