crates/tui/src/snapshots/tui__view__home__tests__home_focus_chip.snap
---
source: crates/tui/src/home_view_tests.rs
expression: drawn
---



                     ▀▄ █▀▀▀▀ ▀▀█▀▀ █▀▀█  █▀▀▀▀ █▀▀▀▄
                     ▀▄ █▄▄▄    █   █▀▀█  ████  █▄▄▄▀
                     ▀▄ █       █   ████  █▀▀▀▀ █ ▀▄
                     ▀▄ █     ▄▄█▄▄ █▀▀█  █▄▄▄▄ █   █ 0.0.1

▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
› █? for shortcuts


[w]  [ ] new worktree  [no model]  [thinking: default]  enter starts a session
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
●  first                                                                       ✕
✓  second                                                                      ✕







          ↓ chips and sessions · F1 the key map · Ctrl+C twice to quit
